Turn the run_one genrule into a proper rule

--- a/gems/sorbet/test/snapshot/BUILD
+++ b/gems/sorbet/test/snapshot/BUILD
@@ -22,6 +22,7 @@ sh_binary(
     data = [
         "sorbet-typed.rev",
         "//main:sorbet",
+        "//gems/sorbet:sorbet",
         "@gems//gems",
         "@ruby_2_5//:bundle",
         "@ruby_2_5//:ruby",
